--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -18,7 +18,7 @@ const today = new Date();
       <div class="flex flex-col items-center text-center max-w-2xl mx-auto">
         <!-- Logo -->
         <a href="/" class="mb-6">
-          <img src="/images/logo.png" alt={SITE_TITLE} class="h-12 w-auto opacity-90 hover:opacity-100 transition-opacity" />
+          <img src="/images/logo.png" alt={SITE_TITLE} class="h-12 w-auto opacity-90" />
         </a>
 
         <!-- Social Links -->
