--- a/src/layouts/Book.astro
+++ b/src/layouts/Book.astro
@@ -121,7 +121,7 @@ if (author) {
                     </div>
                   )}
                 </div>
-                <h3 class="text-lg font-medium text-gray-800 group-hover:text-blue-600 transition-colors">{book.data.title}</h3>
+                <h3 class="text-lg font-medium text-gray-800">{book.data.title}</h3>
                 <p class="text-sm text-gray-600">{book.data.author}</p>
               </a>
             </div>
