--- a/src/pages/chacruna.astro
+++ b/src/pages/chacruna.astro
@@ -48,7 +48,7 @@ const pageDescription = "Chacruna - From the depths of the rainforest to the hei
                             <span class="text-gray-500 text-sm">No cover available</span>
                           </div>
                         )}
-                        <h3 class="text-lg font-medium text-gray-800 mt-4 group-hover:text-blue-600 transition-colors">{book.data.title}</h3>
+                        <h3 class="text-lg font-medium text-gray-800 mt-4 group-">{book.data.title}</h3>
                         <p class="text-sm text-gray-600">{book.data.author}</p>
                       </a>
                     </div>
