--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -53,7 +53,7 @@ const pageDescription = "Get in touch with Luna Station Press";
             </div>
 
             <div class="text-center">
-              <button type="submit" class="inline-block mt-2 items-center bg-nymph hover:bg-green hover:duration-500 text-white hover:text-white py-3 px-8 rounded focus:outline-none focus:ring no-underline not-prose uppercase text-sm font-medium transition-colors"> Send Message </button>
+              <button type="submit" class="inline-block mt-2 items-center bg-nymph text-white py-3 px-8 rounded focus:outline-none focus:ring no-underline not-prose uppercase text-sm font-medium"> Send Message </button>
             </div>
           </form>
         </div>
