--- a/src/components/AuthorBio.astro
+++ b/src/components/AuthorBio.astro
@@ -43,7 +43,7 @@ if (photoUrl) {
       {
         website && (
           <div class="mb-4">
-            <a href={website} class="text-blue-600 hover:text-blue-800 transition-colors" target="_blank" rel="noopener noreferrer">
+            <a href={website} class="text-blue-600" target="_blank" rel="noopener noreferrer">
               Visit {author}'s website
             </a>
           </div>
@@ -55,28 +55,28 @@ if (photoUrl) {
         socialLinks && Object.keys(socialLinks).length > 0 && (
           <div class="flex gap-4">
             {socialLinks.twitter && (
-              <a href={socialLinks.twitter} class="text-blue-400 hover:text-blue-600 transition-colors" target="_blank" rel="noopener noreferrer" aria-label={`${author} on Twitter`}>
+              <a href={socialLinks.twitter} class="text-blue-400" target="_blank" rel="noopener noreferrer" aria-label={`${author} on Twitter`}>
                 <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                   <path d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84" />
                 </svg>
               </a>
             )}
             {socialLinks.instagram && (
-              <a href={socialLinks.instagram} class="text-pink-600 hover:text-pink-800 transition-colors" target="_blank" rel="noopener noreferrer" aria-label={`${author} on Instagram`}>
+              <a href={socialLinks.instagram} class="text-pink-600" target="_blank" rel="noopener noreferrer" aria-label={`${author} on Instagram`}>
                 <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                   <path fill-rule="evenodd" d="M12.017 0C5.396 0 .029 5.367.029 11.987c0 6.621 5.367 11.988 11.988 11.988s11.988-5.367 11.988-11.988C24.005 5.367 18.638.001 12.017.001zM8.449 16.988c-1.297 0-2.448-.49-3.328-1.297C4.243 14.814 3.753 13.663 3.753 12.366c0-1.297.49-2.449 1.368-3.328.878-.879 2.031-1.369 3.328-1.369 1.297 0 2.449.49 3.328 1.369.879.879 1.369 2.031 1.369 3.328 0 1.297-.49 2.448-1.369 3.325-.879.807-2.031 1.297-3.328 1.297zm7.718-9.957c-.735 0-1.297-.562-1.297-1.297s.562-1.297 1.297-1.297 1.297.562 1.297 1.297-.562 1.297-1.297 1.297zM12.017 7.075c-2.734 0-4.95 2.216-4.95 4.95s2.216 4.95 4.95 4.95 4.95-2.216 4.95-4.95-2.216-4.95-4.95-4.95z" clip-rule="evenodd" />
                 </svg>
               </a>
             )}
             {socialLinks.facebook && (
-              <a href={socialLinks.facebook} class="text-blue-700 hover:text-blue-900 transition-colors" target="_blank" rel="noopener noreferrer" aria-label={`${author} on Facebook`}>
+              <a href={socialLinks.facebook} class="text-blue-700" target="_blank" rel="noopener noreferrer" aria-label={`${author} on Facebook`}>
                 <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                   <path fill-rule="evenodd" d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z" clip-rule="evenodd" />
                 </svg>
               </a>
             )}
             {socialLinks.linkedin && (
-              <a href={socialLinks.linkedin} class="text-blue-800 hover:text-blue-900 transition-colors" target="_blank" rel="noopener noreferrer" aria-label={`${author} on LinkedIn`}>
+              <a href={socialLinks.linkedin} class="text-blue-800" target="_blank" rel="noopener noreferrer" aria-label={`${author} on LinkedIn`}>
                 <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                   <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z" />
                 </svg>
