--- a/src/components/LinkButton.astro
+++ b/src/components/LinkButton.astro
@@ -2,6 +2,6 @@
 const { url, linkText } = Astro.props;
 ---
 
-<a href={url} class="inline-block mt-2 items-center bg-nymph hover:bg-green hover:duration-500 text-white hover:text-white py-2 px-3 sm:px-4 rounded focus:outline-none focus:ring no-underline not-prose uppercase text-xs sm:text-sm">
+<a href={url} class="inline-block mt-2 items-center bg-nymph text-white py-2 px-3 sm:px-4 rounded focus:outline-none focus:ring no-underline not-prose uppercase text-xs sm:text-sm">
   {linkText}
 </a>
