--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -70,7 +70,7 @@ const pageDescription = "Latest news and updates from Luna Station Press";
                         <!-- Post content -->
                         <div class="flex-1">
                           <h2 class="text-2xl md:text-3xl font-light text-gray-700 mb-3">
-                            <a href={`/blog/${post.slug}/`} class="hover:text-blue-600 transition-colors no-underline">
+                            <a href={`/blog/${post.slug}/`} class=" no-underline">
                               {post.data.title}
                             </a>
                           </h2>
