--- a/src/pages/blog/archive/[year]/[month]/[...page].astro
+++ b/src/pages/blog/archive/[year]/[month]/[...page].astro
@@ -90,7 +90,7 @@ const pageDescription = `Blog posts from ${archiveTitle}`;
                         <!-- Post content -->
                         <div class="flex-1">
                           <h2 class="text-2xl md:text-3xl font-light text-gray-700 mb-3">
-                            <a href={`/blog/${post.slug}/`} class="hover:text-blue-600 transition-colors no-underline">
+                            <a href={`/blog/${post.slug}/`} class=" no-underline">
                               {post.data.title}
                             </a>
                           </h2>
